# api-dev/router/controller/user.js
@@ -92,6 +92,7 @@ export function create(req, res, next, response = new Response()){
          bank: Config.DEFAULT_BANK,
          getBank: 0,
          loginToken: Validation.getLoginToken(),
+         character: req.body.character
          rank: -1
       }).then(
          (user)=>{
@@ -141,6 +142,7 @@ export function update(req, res, next, response = new Response()){
          Util.safeUpdate(record, "snsToken", req.body, "string");
          Util.safeUpdate(record, "bank", req.body, "number");
          Util.safeUpdate(record, "rank", req.body, "number");
+         Util.safeUpdate(record, "character", req.body, "string");
        } catch (error){
          next(Res.getBadRequestError(error,Res.ResponseCode.InvalidDataType, response));
          return;
