# api/swagger/swagger.yaml
@@ -80,6 +80,8 @@ paths:
                 type: string
               snsToken:
                 type: string
+              character:
+                type: string
           required: true
 
       responses:
@@ -94,7 +96,7 @@ paths:
   
 
     put:
-      description: create new user
+      description: update user
       parameters:
         - name: loginToken
           in: header
@@ -123,6 +125,8 @@ paths:
                 type: number
               rank:
                 type: number
+              character:
+                type: string
           required: true
 
       responses:
